# Photo_slideshow_app

./: README.md  app.py  pyproject.toml  requirements.txt
static/css/: upload.css  user.css  video.css  welcome.css
static/javascript/: admin.js  history.js  upload.js  user.js  video.js  welcome.js
templates/: admin.html  history.html  sign_in.html  sign_up.html  upload.css  upload.html  upload.js  user.css  user.html  user.js  video.css  video.html  video.js  welcome.css  welcome.html  welcome.js
templates/css/: upload.css  user.css  welcome.css
templates/javascript/: user.js  video.js
