[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["AryanilPanja <aryanil.panja@research.iiit.ac.in>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask-Reuploaded = "^1.4.0"
Flask-WTF = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
